--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -7,6 +7,7 @@
     tools:context=".presentation.FavouriteActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rec_view_favourite"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="10dp"
