--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,5 +113,17 @@
             app:layout_constraintVertical_bias="0.142"
             app:srcCompat="@drawable/favorite_border" />
 
+        <Button
+            android:id="@+id/button_go_to_favourite"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="177dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="45dp"
+            android:text="Сохраненные"
+            app:layout_constraintEnd_toStartOf="@+id/imageView_add_to_favourite"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
