--- a/app/src/main/res/layout/textview_and_imageview.xml
+++ b/app/src/main/res/layout/textview_and_imageview.xml
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:scrollbars="vertical"
         android:text="Кошачий факт"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
